tests/invalid/generated_binop_sub_bool_str/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: bool = True
    y: str = "hello"
    z = x - y
